eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/IBBCaseDirector__c.object
<CustomObject>
    <fields>
        <fullName>CAA_Refer_Type__c</fullName>
        <label>CAA Refer Type</label>
        <picklist>
            <picklistValues>
                <fullName>FCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Docs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CaseCategory__c</fullName>
        <label>CaseCategory</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseCode__c</fullName>
        <label>CaseCode</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseDescription__c</fullName>
        <label>CaseDescription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CaseOrigin__c</fullName>
        <label>CaseOrigin</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CasePriority__c</fullName>
        <label>CasePriority</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseQueue__c</fullName>
        <label>CaseQueue</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseRecordType__c</fullName>
        <label>CaseRecordType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseStatus__c</fullName>
        <label>CaseStatus</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseSubject__c</fullName>
        <label>CaseSubject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseUseConfigUser__c</fullName>
        <label>CaseUseConfigUser</label>
        <picklist>
            <picklistValues>
                <fullName>CONFIGUSER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PASSEDUSER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CaseUseQueue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CaseUseQueue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IBBCaseDirectors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CaseDirector</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CaseCategory__c</columns>
        <columns>CaseCode__c</columns>
        <columns>CaseSubject__c</columns>
        <columns>CaseDescription__c</columns>
        <columns>CaseOrigin__c</columns>
        <columns>CasePriority__c</columns>
        <columns>CaseQueue__c</columns>
        <columns>CaseRecordType__c</columns>
        <columns>CaseStatus__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>CaseDirector Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CaseDirectors</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>